--- a/beliefs.html
+++ b/beliefs.html
@@ -46,7 +46,7 @@
                 <p>I am a Catholic Christian, I strongly believe in Jesus Christ and try my best to be a good follower and keep good faith.</p>
             </div>
             <div class="col-md-6">
-                <img src="cross.jpeg" width="400" height="400">
+                <img src="media/cross.jpeg" width="400" height="400">
             </div>
         </div>
         <div class="row">
@@ -54,7 +54,7 @@
                 <h1>"But many who are first will be last, and the last first," - Matthew 19:30</h1>
             </div>
             <div class="col-md-6">
-                <img src="matthew.jpeg" width="400" height="400">
+                <img src="media/matthew.jpeg" width="400" height="400">
             </div>
         </div>
         </div>
