--- a/england.html
+++ b/england.html
@@ -48,7 +48,7 @@
                 <p>I would really like to visit England some point in my life, Im really inspired by their history and structure. England also facinates me with their rich architecture, and the royalty system also strikes me curious.</p>
             </div>
             <div class="col-md-6">
-                <img src="england.jpg" height="450" width="450">
+                <img src="media/england.jpg" height="450" width="450">
             </div>
         </div>
     <!-- Optional JavaScript; choose one of the two! -->
