--- a/hobbies.html
+++ b/hobbies.html
@@ -41,7 +41,7 @@
         </nav>
         <div class="row">
             <div class="col-md-6">
-                <img class="fluid" src="footballhome.jpeg" width="400" height="400">
+                <img class="fluid" src="media/footballhome.jpeg" width="400" height="400">
             </div>
             <div class="col-md-6">
                 <p>My favorite hobby and passion of mine is playing football. I formally played on the Humboldt Park Patriots and played football for Lane Tech on the Freshman and JV level during the 2025 Season, my main position is Linebacker but can second as a DE or DT, same goes on offense OT or OG. I've been playing football for a long time, since I was a young child. My goal is to make it to the NFL someday, My dream actually. I work everyday striving to improve myself and skills everyday to make this dream happen, I train every week with the Lane Tech JV head coach Anthony Butler Jr. </p>
@@ -49,7 +49,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-              <img src="rainbowsix.jpeg" width="400" height="400">
+              <img src="media/rainbowsix.jpeg" width="400" height="400">
             </div>
             <div class="col-md-6">
                 <p>Another hobbie of mine is playing video games, when Im not currently watching, playing, training for football, I sit back and relax my sore muscles and put on a game. I guess you can call it a little escape, my favorite game is shown on the left!</p>
