--- a/htmlrecipe.html
+++ b/htmlrecipe.html
@@ -43,7 +43,7 @@
             The history of the Peanut Butter and Jelly sandwich dates all the back to 1901, it started to gain popularity decades later in the 1920s with the invention of making the peanut butter less oily. With the introduction of sliced bread in 1928 US soldiers utilized the easy and portable sandwich during WWII as rations. Cementing itself in history as an American Staple.
         </p>
         <p>This Recipe will help you make a standard timeless peanut butter and jelly sandwich!</p>
-        <img class="pbj" src="pbjsandwich.jpg">
+        <img class="pbj" src="media/pbjsandwich.jpg">
         <h2>
             Ingredients
         </h2>
@@ -125,7 +125,7 @@
             The history of the Peanut Butter and Jelly sandwich dates all the back to 1901, it started to gain popularity decades later in the 1920s with the invention of making the peanut butter less oily. With the introduction of sliced bread in 1928 US soldiers utilized the easy and portable sandwich during WWII as rations. Cementing itself in history as an American Staple.
         </p>
         <p>This Recipe will help you make a standard timeless peanut butter and jelly sandwich!</p>
-        <img class="pbj" src="pbjsandwich.jpg">
+        <img class="pbj" src="media/pbjsandwich.jpg">
         <h2>
             Ingredients
         </h2>
