--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p>I was born in Jacksonville, Florida. I moved to Chicago when I was just a year old, and I love it here! I am currently 15 years old and was born on October 26th 2010.</p>
             </div>
             <div class="col-md-6">
-              <img src="headshot.jpeg" width="350" height="350">
+              <img src="media/headshot.jpeg" width="350" height="350">
             </div>
           </div>
         </div>
@@ -80,11 +80,9 @@
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Music</h5>
-              <h6 class="card-subtitle mb-2 text-muted">These are clips of the music I like!</h6>
-              <audio src="Renada.mp4" controls></audio>
-              <audio src="Nevada.mp4" controls></audio>
-              <a href="https://www.youtube.com/watch?v=81BAuH93zuE" class="card-link">First Song</a>
-              <a href="https://www.youtube.com/watch?v=msqgtvjRSvw" class="card-link">Second Song</a>
+              <h6 class="card-subtitle mb-2 text-muted">These are links to music I like!</h6>
+              <a href="https://www.youtube.com/watch?v=81BAuH93zuE" class="card-link">Nevada</a>
+              <a href="https://www.youtube.com/watch?v=msqgtvjRSvw" class="card-link">Ranada</a>
               <a href="https://www.youtube.com/@NbaYoungBoy" class="card-link">Artist</a>
             </div>
           </div>
