--- a/italy.html
+++ b/italy.html
@@ -48,7 +48,7 @@
                 <p>I really want to visit Italy because Im Italian! I'd love to experience my families culture and heritage with them some time in my life. I also really admire their architecture and history.</p>
             </div>
             <div class="col-md-6">
-                <img src="italy.avif" height="450" width="450">
+                <img src="media/italy.avif" height="450" width="450">
             </div>
         </div>
      </div>
