--- a/mexico.html
+++ b/mexico.html
@@ -48,7 +48,7 @@
                 <p>I would really love to visit Mexico some day, I always loved hotter weather and Mexico just looks so beautiful. Id love to sit on the beachside and looking at the ocean!</p>
             </div>
             <div class="col-md-6">
-                <img src="mexico.jpg" height="450" width="450">
+                <img src="media/mexico.jpg" height="450" width="450">
             </div>
     </div>
 
