--- a/recipe.html
+++ b/recipe.html
@@ -61,7 +61,7 @@
             <p class="lead">This recipe will help you make a delicious, clasic, southern fried chicken. This recipe is simple and easy, and the classic taste of your freshly fried chicken will make this process even more rewarding!</p>
         </div>
           <div class="col-md-6">  
-            <img class="rounded" src="friedchicken.jpg" width="300" height="300">
+            <img class="rounded" src="media/friedchicken.jpg" width="300" height="300">
         </div>
       </div>
      </div>
@@ -89,16 +89,16 @@
         <hr>
         <div class="row">
             <div class="col-md-3">
-              <img class="rounded" src="flour.jpeg" width="250" height="250">
+              <img class="rounded" src="media/flour.jpeg" width="250" height="250">
             </div>
             <div class="col-md-3">
-              <img class="rounded" src="buttermilk.jpeg" width="250" height="250">
+              <img class="rounded" src="media/buttermilk.jpeg" width="250" height="250">
             </div>
             <div class="col-md-3">
-              <img class="rounded" src="chickenpieces.webp" width="250" height="250">
+              <img class="rounded" src="media/chickenpieces.webp" width="250" height="250">
             </div>
             <div class="col-md-3">
-              <img class="rounded" src="Paprika.jpeg" width="250" height="250">
+              <img class="rounded" src="media/Paprika.jpeg" width="250" height="250">
             </div>
     </div>
 
