--- a/schedule.html
+++ b/schedule.html
@@ -107,7 +107,7 @@
         </table>
         </div>
         <div class="col-md-6">
-          <img src="Lane_Tech_2.jpg" width="500" height="500">
+          <img src="media/Lane_Tech_2.jpg" width="500" height="500">
         </div>
       </div>
     </div>
