--- a/japan.html
+++ b/japan.html
@@ -48,7 +48,7 @@
                     <p>I really want to visit Japan because of their rich, beatiful cultue, people, and architecture. I also really like anime.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="japan.jpg" width="300" height="300">
+                    <img src="media/japan.jpg" width="300" height="300">
                 </div>
             </div>
         </div>
