--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       <div class="row">
         <div class="col-md-4">
-          <h4>These are countries I want to visit some time in my life!</h4>
+          <h4>These are countries I want to visit  in my life!</h4>
           <div class="list-group">
             <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
               Countries
